Correct template paths

--- a/app/monitoring/templates/monitoring/base5.html
+++ b/app/monitoring/templates/monitoring/base5.html
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-{% include 'monitoring/custom/navbar5.html' %}
+{% include 'monitoring/navbar5.html' %}
 <div class="container py-5">
     <div class="row">
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
